# wanderly

./: .flaskenv  LICENSE  README.md  pyproject.toml  wsgi.py
src/: wsgi.py
src/wanderly/: app.py  database.py  filters.py  schema.sql  seed.sql  session.py  utils.py
src/wanderly/static/css/: app.css  auth.css  create-trip.css  itinerary.css  layout.css  trips.css  warming_up.css
src/wanderly/static/js/: app.js  warming.js
src/wanderly/templates/: create_trip.html  home.html  itinerary.html  layout.html  login.html  signup.html  trips.html  warming_up.html
