[project]
name = "wanderly"
version = "0.1.0"
description = ""
authors = [
    {name = "Christine Lin",email = "lin.christine19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "wanderly", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
